repo: 在在顶层构建中实现desktop生成并定义安装方式及deb打包

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,25 @@ spark_add_executable_path(${PROJECT_NAME} src
 target_link_qt5(${PROJECT_NAME})
 
 include(cmake/SparkBuildGraphviz.cmake)
+
+include(cmake/SparkDesktopMacros.cmake)
+# 内容默认应用名称: Name=@PROJECT_NAME@ 与项目名称相同
+spark_desktop_macros(
+    "image-absorber" # 应用名称: Name=
+    "图片吸收器" # 应用名称: Name[zh_CN]=
+    "图片吸收器" # 应用说明: Comment=
+    "Application" # 应用类型: Type=
+    "/usr/bin/image-absorber" # 执行程序: Exec=
+    "/usr/share/image-absorber/icon.png" # 图标路径: Icon=
+    "" # 应用分类: Category=
+)
+install(FILES ${CMAKE_BINARY_DIR}/image-absorber.desktop
+    DESTINATION /usr/share/applications)
+
+install(TARGETS image-absorber
+    DESTINATION /usr/bin)
+install(FILES resources/icon.png
+    DESTINATION /usr/share/image-absorber)
+
+find_package(DebPackage PATHS ${CMAKE_SOURCE_DIR})
+add_package_descript(cmake/package-deb.descript)
